Resolves: tdf#59570 scrollbar used instead of slider

Change-Id: I14241c8a4418e8356a590a32b661f283b606f9fa